crates/analyzer/tests/snapshots/errors__binary_op_lshift_bool.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `<<` operands must be numeric
  ┌─ [snippet]:5:3
  │
5 │   a << b
  │   ^    ^ this has type `i256`
  │   │     
  │   this has type `bool`


